# minecraft-server-controller

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  dependabot.yml  pyproject.toml  template.yaml
.github/workflows/: cd.yaml  ci.yaml  deploy.yaml
.utils/: gitignore.ext
docs/: configure-dev-env.md  define-env-variables.md  learn-makefile-rules.md  overview_diagram.py  prepare-aws-account.md  run-api-methods.md
events/: get_servers.json
src/: ebsmapper.py  ec2mapper.py  mcserver.py  mcservers.py  mcsnapshots.py  mcusers.py  myutils.py  servers.py
statemachine/: idle-servers.asl.json
tests/: conftest.py
tests/e2e/: test_getservers.py  test_idle_servers.py
tests/integration/: get-servers-dream.json  get-servers.json  get-users.json
tests/unit/: __init__.py  test_ebsmapper.py  test_ec2mapper.py  test_mcserver.py  test_mcservers.py  test_mcsnapshots.py  test_mcusers.py  test_myutils.py  test_servers_funcs.py
workflows/: stop-all-servers.asl.json  stop-idle-servers.asl.json
