[tool.poetry]
name = "minecraft-server-controller"
version = "0.1.0"
description = "API for interacting with Minecraft servers"
authors = ["cpolanec <cpolanec@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "~3.8"
boto3 = "~1.17"
mcrcon = "^0.6"
parse = "^1.19"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5"
aws-sam-cli = "~1.24"
cryptography = "<36.1"
diagrams = "^0.20"
flake8 = "^3.9"
moto = "^1.3"
pydocstyle = "^5.1"
pylint = "^2.8"
pytest = "^6.2"
pytest-cov = "^2.12"
pytest-sugar = "^0.9"
requests = "^2.23"
rope = "^0.19"

[tool.pylint.master]
init-hook="import sys; sys.path.append('src')"

[tool.pylint.similarities]
ignore-imports = "yes"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov-report term-missing --cov-report xml"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
